--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "main": "src/index.tsx",
   "module": "src/index.tsx",
+  "homepage": "https://bimohenokh.github.io/MyPortoV2",
   "scripts": {
     "dev": "bun --hot src/index.tsx",
-    "build": "bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"' --env='BUN_PUBLIC_*'",
+    "build": "bun build ./src/index.html --outdir=docs --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"' --env='BUN_PUBLIC_*'",
     "start": "NODE_ENV=production bun src/index.tsx"
   },
   "dependencies": {
