--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react-dom": "^19"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "4.1.11"
   }
 }
