--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
     "react-dom": "^19"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "@types/bun": "latest",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "@types/react-dom": "^19"
   }
 }
