--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bun-react-template",
+  "name": "myportofolio",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -12,12 +12,27 @@
     "start": "NODE_ENV=production bun src/index.tsx"
   },
   "dependencies": {
+    "@formspree/react": "^2.2.4",
+    "aos": "^2.3.4",
     "react": "^19",
-    "react-dom": "^19"
+    "react-dom": "^19",
+    "react-google-recaptcha": "^2.1.0",
+    "react-router-dom": "^6.2.1",
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^8.1.0",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.19",
+    "validator": "^13.7.0",
+    "web-vitals": "^2.1.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/bun": "latest",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-router-hash-link": "^2.4.9",
+    "@types/validator": "^13.15.2"
   }
 }
